--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+    <link rel="icon" href="https://res.cloudinary.com/djhweskrq/image/upload/v1744041609/logosev_rgkoxc.png" type="image/x-icon">
   <style>
     /* Your existing animations and styles */
     @keyframes fadeIn {
