--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,6 +3,16 @@
 
 <head>
   <title>SelectEV - Your Smart EV Selection Assistant</title>
+  <meta name="title" content="SelectEV - Your Smart EV Selection Assistant">
+  <meta name="description" content="Find the perfect electric vehicle (EV) tailored to your needs. Smart, fast, and personalized recommendations.">
+
+<!-- Open Graph / Facebook / WhatsApp -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://select-ev.onrender.com/">
+<meta property="og:title" content="SelectEV - Your Smart EV Selection Assistant">
+<meta property="og:description" content="Find the perfect electric vehicle (EV) tailored to your needs. Smart, fast, and personalized recommendations.">
+<meta property="twitter:url" content="https://select-ev.onrender.com/">
+
   <link rel="stylesheet" href="/css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
