--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 SelectEV. All rights reserved.</p>
+        <p>&copy; 2025 MySelectEV. All rights reserved.</p>
       </div>
     </div>
   </footer>
