--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>
-    <%= title %> | SelectEV
+    <%= title %> | MySelectEV
   </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="/css/headfoot.css">
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="https://res.cloudinary.com/djhweskrq/image/upload/v1744041609/logosev_rgkoxc.png" alt="SelectEV Logo">
+      <img src="https://res.cloudinary.com/djhweskrq/image/upload/v1744041609/logosev_rgkoxc.png" alt="MySelectEV Logo">
     </div>
     <nav>
       <ul>
