--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <title>About MySelectEV - Your Smart EV Selection Assistant</title>
+  <meta name="description" content="SelectEV is your trusted platform to explore, compare, and stay updated about electric vehicles and charging stations. Learn more about our mission to power the EV revolution.">
   <link rel="stylesheet" href="/css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://res.cloudinary.com/djhweskrq/image/upload/v1744041609/logosev_rgkoxc.png"
+  type="image/x-icon">
+
   <style>
     /* About Page Specific Styles */
     .about-hero {
