--- a/views/pages/evFinder.ejs
+++ b/views/pages/evFinder.ejs
@@ -3,12 +3,16 @@
 
 <head>
   <title>MySelectEV - EV Finder & Comparison</title>
+  <meta name="description" content="Discover and compare electric vehicles with SelectEV. Use smart filters to find EVs by price, range, brand, and features. Find your perfect EV match today!">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://res.cloudinary.com/djhweskrq/image/upload/v1744041609/logosev_rgkoxc.png"
+  type="image/x-icon">
+
   <style>
     /* Dark Mode Styles */
     .dark-mode {
