--- a/views/pages/evStation.ejs
+++ b/views/pages/evStation.ejs
@@ -5,8 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Find Nearest EV Charging Station | MySelectEV</title>
+  <meta name="description" content="Locate the nearest EV charging stations easily with SelectEV. Get real-time details on station availability, charging type, and directions.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" href="https://res.cloudinary.com/djhweskrq/image/upload/v1744041609/logosev_rgkoxc.png"
+  type="image/x-icon">
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&display=swap');
 
